--- a/src-pwa/manifest.json
+++ b/src-pwa/manifest.json
@@ -1,12 +1,12 @@
 {
-  "orientation": "portrait",
-  "background_color": "#ffffff",
+  "orientation": "auto",
+  "background_color": "#eee",
   "theme_color": "#b9004d",
   "icons": [
     {
-      "src": "https://scontent-mia3-1.xx.fbcdn.net/v/t39.30808-6/275991869_103594065617109_228020381243183883_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=QnvI18noyB8AX9QIrlv&_nc_ht=scontent-mia3-1.xx&oh=00_AfDbOWdOtf6ClQljjTSHpIzB2wZnJMjbIMBCuWuIx8ngEA&oe=63618A4E",
+      "src": "/icons/imagotipo.webp",
       "sizes": "any",
-      "type": "image/png"
+      "type": "image/webp"
     }
   ]
 }
