--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
+    "pug": "^3.0.2",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.0"
+    "vue-pug": "^1.0.2",
+    "vue-router": "^4.0.0",
+    "vuetify": "^3.0.1"
   },
   "devDependencies": {
     "@quasar/app-vite": "^1.0.0",
